Fixed missing margin value

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -92,7 +92,7 @@ dd {
   width: 800px;
   margin: auto;
   margin-top: 1em;
-  margin-bottom: em;
+  margin-bottom: 2em;
   padding: 0 1em;
   border: 1px solid #ccc;
   -webkit-box-shadow: #333 0px 3px 3px;
